<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="thammasat.callforcode.fragment.LoginFragment">

    <RelativeLayout
        android:id="@+id/fragmentLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProjectName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/project_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_large" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_side_bar_small"
                    android:layout_marginRight="@dimen/margin_side_bar_small"
                    android:background="@drawable/button_login"
                    android:gravity="center"
                    android:padding="@dimen/padding_button"
                    android:text="@string/login"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_medium" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/margin_side_bar_large"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@android:color/white" />

                <TextView
                    android:id="@+id/tvOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/or"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_small" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/margin_side_bar_large"
                    android:layout_weight="1"
                    android:alpha="0.7"
                    android:background="@android:color/white" />
            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/llTwitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_side_bar_large"
                    android:layout_marginRight="@dimen/margin_side_bar_large"
                    android:paddingBottom="@dimen/padding_button"
                    android:paddingLeft="@dimen/padding_button"
                    android:paddingRight="@dimen/padding_button"
                    android:paddingTop="@dimen/padding_button" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/llFacebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_side_bar_large"
                    android:layout_marginRight="@dimen/margin_side_bar_large"
                    android:paddingBottom="@dimen/padding_button"
                    android:paddingLeft="@dimen/padding_button"
                    android:paddingRight="@dimen/padding_button"
                    android:paddingTop="@dimen/padding_button"
                    android:textSize="@dimen/text_medium"
                    app:com_facebook_login_text="@string/login_with_facebook" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <com.shobhitpuri.custombuttons.GoogleSignInButton
                    android:id="@+id/llGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_side_bar_large"
                    android:layout_marginRight="@dimen/margin_side_bar_large"
                    android:paddingBottom="@dimen/padding_button"
                    android:paddingLeft="@dimen/padding_button"
                    android:paddingRight="@dimen/padding_button"
                    android:paddingTop="@dimen/padding_button"
                    android:text="@string/login_with_google" />

            </FrameLayout>

            <TextView
                android:id="@+id/tvSignUpRec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/don_t_have_account"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_small" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_side_bar_small"
                    android:layout_marginRight="@dimen/margin_side_bar_small"
                    android:background="@drawable/button_sign_up"
                    android:gravity="center"
                    android:padding="@dimen/padding_button"
                    android:text="@string/sign_up_now"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_medium" />
            </FrameLayout>

        </LinearLayout>
    </RelativeLayout>
</layout>