<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="thammasat.callforcode.fragment.SignUpFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvProjectName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_side_bar_large"
                        android:layout_marginRight="@dimen/margin_side_bar_large"
                        android:background="@drawable/button_text_box"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:src="@drawable/user" />

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:layout_weight="4"
                            android:background="@android:color/transparent"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/padding_button"
                            android:paddingRight="@dimen/padding_button"
                            android:paddingTop="@dimen/padding_button"
                            android:textColor="@color/colorFontTitle"
                            android:textColorHint="@color/colorTextHint"
                            android:textSize="@dimen/text_medium" />
                    </LinearLayout>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_side_bar_large"
                        android:layout_marginRight="@dimen/margin_side_bar_large"
                        android:background="@drawable/button_text_box"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginBottom="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            android:layout_weight="1"
                            android:src="@drawable/lock" />

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:layout_weight="4"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingBottom="@dimen/padding_button"
                            android:paddingRight="@dimen/padding_button"
                            android:paddingTop="@dimen/padding_button"
                            android:textColor="@color/colorFontTitle"
                            android:textColorHint="@color/colorTextHint"
                            android:textSize="@dimen/text_medium" />
                    </LinearLayout>
                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tvCreate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_side_bar_small"
                        android:layout_marginRight="@dimen/margin_side_bar_small"
                        android:background="@drawable/button_sign_up"
                        android:gravity="center"
                        android:padding="@dimen/padding_button"
                        android:text="@string/create"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_medium" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_side_bar_large"
                        android:layout_marginRight="@dimen/margin_side_bar_large"
                        android:layout_weight="1"
                        android:alpha="0.7"
                        android:background="@android:color/white" />

                </FrameLayout>

                <LinearLayout
                    android:id="@+id/llSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center|top"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSignInRec"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/already_have_account"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/tvSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:text="@string/sign_in"
                        android:textColor="#FFB100"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>